--- a/package.json
+++ b/package.json
@@ -6,11 +6,18 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:init": "ts-node -P tsconfig.json database/init.ts",
+    "db:test-package": "ts-node -P tsconfig.json scripts/create-test-package.ts"
   },
   "dependencies": {
+    "@types/bcryptjs": "^3.0.0",
+    "@types/pg": "^8.15.6",
+    "bcryptjs": "^3.0.3",
     "file-saver": "^2.0.5",
     "next": "15.2.4",
+    "pg": "^8.16.3",
+    "prettier": "^3.6.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "xlsx": "^0.18.5"
