feat: 按照需求修改。

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@types/bcryptjs": "^3.0.0",
     "@types/pg": "^8.15.6",
     "bcryptjs": "^3.0.3",
+    "dom-to-image-more": "^3.7.2",
     "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
     "next": "15.2.4",
     "pg": "^8.16.3",
     "prettier": "^3.6.2",
